--- a/crux/usemoon/packages/android/app/src/main/res/values/strings.xml
+++ b/crux/usemoon/packages/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">My Crux App</string>
+    <string name="app_name">My Crux Application</string>
 </resources>
